// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Component Button - test Button Primary - snapshot 1`] = `
<View
  accessibilityLabel="Primary button"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 20,
        "justifyContent": "center",
        "minHeight": 44,
        "paddingHorizontal": 16,
      },
      {
        "width": "100%",
      },
      {
        "backgroundColor": "#18bd18",
        "borderColor": "#18bd18",
        "borderWidth": 1,
      },
      false,
      false,
      {},
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "600",
          "textAlign": "center",
        },
        {
          "color": "#c3c3c3",
        },
        undefined,
      ]
    }
  >
    Primary button
  </Text>
</View>
`;

exports[`Component Button - test Button Secondary - snapshot 1`] = `
<View
  accessibilityLabel="Secondary button"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 20,
        "justifyContent": "center",
        "minHeight": 44,
        "paddingHorizontal": 16,
      },
      {
        "width": "100%",
      },
      {
        "backgroundColor": "transparent",
        "borderColor": "#ffffff",
        "borderWidth": 1,
      },
      false,
      false,
      {},
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "600",
          "textAlign": "center",
        },
        {
          "color": "#c3c3c3",
        },
        undefined,
      ]
    }
  >
    Secondary button
  </Text>
</View>
`;
